Added tests, finalised the user part, added roles for users